--- a/firstform.html
+++ b/firstform.html
@@ -14,19 +14,21 @@
 
 <body>
 
-    <a href="https://www.microsoft.com">Microsoft</a>
-    <br><br>
-    <form method="POST" action="#">
-        <div class="mb-3">
-            <label for="" class="form-label">Name</label>
-            <input type="text" class="form-control" name="name">
-        </div>
-        <div class="mb-3">
-            <label for="" class="form-label">Address</label>
-            <input type="text" class="form-control" name="address">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    <div class="container mt-5">
+        <a class="btn btn-primary" href="https://www.microsoft.com">Microsoft</a>
+        <br><br>
+        <form method="POST" action="#">
+            <div class="mb-3">
+                <label for="" class="form-label">Name</label>
+                <input type="text" class="form-control" name="name">
+            </div>
+            <div class="mb-3">
+                <label for="" class="form-label">Address</label>
+                <input type="text" class="form-control" name="address">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
 </body>
 
 </html>
