--- a/gallery.html
+++ b/gallery.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Biography</title>
+    <title>Gallery</title>
 </head>
-
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -25,10 +23,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./gallery.html">Gallery</a>
+                            <a class="nav-link active" aria-current="page" href="#">Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Biography</a>
+                            <a class="nav-link" href="./biography.html">Biography</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -58,59 +56,34 @@
     </div>
 
     <div class="container">
-        <div class="row">
-            <aside class="col-4 mt-5">
-                <h3>Skills</h3>
-                <ul>
-                    <li>.NET</li>
-                    <li>SpringBoot</li>
-                    <li>...</li>
-                </ul>
-            </aside>
-            <section class="col-8">
-                <div class="bg-info bg-gradient mt-5">
-                    <h3>Job 1, Sep 19 - Sep 22</h3>
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat blanditiis, dolor odit nisi
-                        quas iusto temporibus, harum reiciendis eum error culpa corrupti quibusdam consectetur, a vero
-                        eius neque ipsam beatae!
-                    </p>
-                </div>
-                <div class="bg-light bg-gradient mt-5">
-                    <h3>Job 2, Sep 22 - Present</h3>
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore odio laudantium, quo ut
-                        voluptatum accusantium modi quaerat repellendus, eaque quod eum perferendis voluptate provident
-                        quam reiciendis, nam reprehenderit molestias temporibus!
-                    </p>
-                </div>
-            </section>
-        </div>
-    </div>
-
-    <div class="container">
+        <h1>My Gallery</h1>
+        <br><br>
         <div class="row">
             <div class="col">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum accusamus, cum modi quod, deserunt
-                natus dignissimos earum error pariatur quo iure, voluptatum at harum? Deserunt soluta unde molestias est
-                ipsam.
+                <img src="./images/rat.jpg">
             </div>
             <div class="col">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur dolorum omnis maiores error. Illum,
-                pariatur incidunt. Ad porro sint magni eveniet incidunt vel voluptatibus aperiam quis culpa. Obcaecati,
-                officia aspernatur.
+                <img src="./images/ox.jpg">
             </div>
             <div class="col">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempora provident, placeat vel expedita alias
-                cumque ullam tempore a corrupti asperiores eaque sunt facere veniam in quos. Consequuntur itaque magnam
-                quos!
+                <img src="./images/tiger.jpg">
+            </div>
+            <div class="col">
+                <img src="./images/rabbit.jpg">
+            </div>
+            <div class="col">
+                <img src="./images/dragon.jpg">
+            </div>
+            <div class="col">
+                <img src="./images/snake.jpg">
+            </div>
+            <div class="col">
+                <img src="./images/horse.jpg">
+            </div>
+            <div class="col">
+                <img src="./images/goat.jpg">
             </div>
         </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
 </body>
-
 </html>
