--- a/gallery.html
+++ b/gallery.html
@@ -60,28 +60,40 @@
         <br><br>
         <div class="row">
             <div class="col">
-                <img src="./images/rat.jpg">
+                <img src="./images/rat.jpg" width="100px" height="100px">
             </div>
             <div class="col">
-                <img src="./images/ox.jpg">
+                <img src="./images/ox.jpg" width="100px" height="100px">
             </div>
             <div class="col">
-                <img src="./images/tiger.jpg">
+                <img src="./images/tiger.jpg" width="100px" height="100px">
             </div>
             <div class="col">
-                <img src="./images/rabbit.jpg">
+                <img src="./images/rabbit.jpg" width="100px" height="100px">
             </div>
             <div class="col">
-                <img src="./images/dragon.jpg">
+                <img src="./images/dragon.jpg" width="100px" height="100px">
             </div>
             <div class="col">
-                <img src="./images/snake.jpg">
+                <img src="./images/snake.jpg" width="100px" height="100px">
             </div>
             <div class="col">
-                <img src="./images/horse.jpg">
+                <img src="./images/horse.jpg" width="100px" height="100px">
             </div>
             <div class="col">
-                <img src="./images/goat.jpg">
+                <img src="./images/goat.jpg" width="100px" height="100px">
+            </div>
+            <div class="col">
+                <img src="./images/monkey.jpg" width="100px" height="100px">
+            </div>
+            <div class="col">
+                <img src="./images/rooster.jpg" width="100px" height="100px">
+            </div>
+            <div class="col">
+                <img src="./images/dog.jpg" width="100px" height="100px">
+            </div>
+            <div class="col">
+                <img src="./images/pig.jpg" width="100px" height="100px">
             </div>
         </div>
     </div>
